# synth-q-mat-generator

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: lint.yml
conf/: config.yaml
conf/composition/: default.yaml
conf/generate/: default.yaml
conf/models/: default.yaml
conf/reward/: default.yaml  stability_only.yaml
conf/train/: default.yaml  smoke.yaml
configs/: defaults.yaml
data/: raw.dvc
docs/: m4-rl-finetuning.md
references/: INDEX.md  README.md  papers.bib  tags.yaml
references/text/: aykol2018thermolimit.md  bartel2022stability.md  batatia2022mace.md  bengio2021gflownet.md  black2023ddpo.md  bradlyn2017tqc.md  cao2025crystalformer.md  cheetham2024gnom_critique.md  cheetham2025digitalage.md  chen2022m3gnet.md  chen2025matinvent.md  choudhary2019spillage.md  choudhary2020jarvis.md  choudhary2021alignn.md  choudhary2021magnetic_spillage.md  fan2023dpok.md  giannozzi2009qe.md  haarnoja2018sac.md  jain2013materialsproject.md  jang2020synthesizability.md  jiao2023diffcsp.md  larsen2017ase.md  leeman2024challenges.md  lutchyn2018majorana.md  merchant2023gnome.md  miksch2021mlsimulations.md  olivecrona2017reinvent.md  ong2013pymatgen.md  roijers2013morl.md  schulman2017ppo.md  sutton2018rl.md  szymanski2023alab.md  zeni2025mattergen.md  zhang2009topological.md
results/metrics/: baseline.json  eval.json  train.json
scripts/: check_docstrings.py  download_data.py  download_models.py  extract_paper.py  gen_smoke.sh  setup_mattergen.sh
scripts/hpc/: train.sbatch  vasp.sbatch
src/synth_q_mat/: __init__.py  config.py
src/synth_q_mat/data/: __init__.py  hull_cache.py
src/synth_q_mat/eval/: __init__.py  baseline.py  evaluate.py
src/synth_q_mat/models/: __init__.py  evaluator.py  generator.py  stability.py
src/synth_q_mat/rl/: __init__.py  reward.py  train.py
src/synth_q_mat/rl/reward/: __init__.py  combine.py  composition.py  stability.py  weights.py
src/synth_q_mat/viz/: __init__.py  generate.py
tests/: test_composition.py  test_reward.py  test_stability.py
