[project]
name = "synth-q-mat-generator"
version = "0.1.0"
description = "RL-guided discovery of topologically constrained quantum materials"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Core ML
    "torch>=2.4.0",
    "numpy>=2.0",
    "scipy>=1.13.0",
    # Materials science
    "pymatgen>=2024.6.10",
    "ase>=3.23.0",
    "matgl>=1.1.3",            # M3GNet stability evaluator + DGL-free GNN framework
    # NOTE: the topology (spin-orbit spillage) predictor is trained on JARVIS
    # spillage labels in the research phase using a DGL-free framework (matgl,
    # or MACE-MP). ALIGNN was dropped — it requires DGL, which has no builds for
    # modern torch/Python.
    # RL
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",
    # Data / IO + source databases
    "pandas>=2.2.0",
    "h5py>=3.11.0",
    "tqdm>=4.66.0",
    "mp-api>=0.41.0",          # Materials Project client
    "jarvis-tools>=2024.4.20", # JARVIS-DFT database access
    "python-dotenv>=1.0.0",    # load .env in entrypoints
    # Experiment tracking + artifact versioning
    "mlflow>=2.14.0",
    "dvc[s3]>=3.51.0",
    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
    # Config
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",       # Structured, override-able experiment configs
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synth_q_mat"]

# ALIGNN (topology predictor) and DiffCSP (crystal generator) are NOT on PyPI in a
# form compatible with this stack. They are installed/fetched by
# scripts/download_models.py. See README "Pretrained models" for details.

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ANN"]
ignore = [
    "E501",    # line length handled by formatter
    "B008",    # function calls in argument defaults (common in hydra/click)
    "ANN401",  # allow typing.Any where genuinely needed
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]        # don't require type annotations in tests
"scripts/*" = ["ANN"]      # scripts are entrypoints, lighter typing

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
